# path_tracer_c

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: bitmap.h  ray.h  renderer.h  scene.h  shapes.h  threadpool.h  vector.h
include/gpu/: shader.h
shaders/: rtx_frag.glsl  rtx_vert.glsl  triangle_frag.glsl  triangle_vert.glsl
src/: bitmap.c  main.c  ray.c  renderer.c  scene.c  shader.c  threadpool.c  vector.c
src/gpu/: shader.c
